--- a/TeaAndCoffe/Views/Category/Index.cshtml
+++ b/TeaAndCoffe/Views/Category/Index.cshtml
@@ -3,11 +3,11 @@
 
 <div class="container p-3">
     <div class="row pt-4">
-        <div class="col-6">
+        <div class="col">
             <h2 class="text-success">Category List</h2>
         </div>
-        <div class="col-6 text-xl-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+        <div class="col fa-pull-right">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary fa-pull-right">
                 <i class="fa-solid fa-plus"></i> &nbsp; Create New Category
             </a>
         </div>
@@ -17,7 +17,7 @@
 
     @if (Model.Count() > 0)
     {
-        <table class="table table-bordered table-striped" style="width:100%; border:1px solid #222">
+        <table class="table table-bordered table-striped  bg-white" style="width:100%; border:2px solid">
             <thead>
                 <tr>
                     <th>
