--- a/TeaAndCoffee/Views/Cart/Summary.cshtml
+++ b/TeaAndCoffee/Views/Cart/Summary.cshtml
@@ -59,12 +59,14 @@
                                         <span class="text-info">Summary:</span>
                                     </h4>
                                     <ul class="list-group mb-3">
-                                        @foreach (var item in Model.ProductList)
+                                        @for (int i = 0; i < Model.ProductList.Count(); i++)
                                         {
+                                            <input type="hidden" asp-for="@Model.ProductList[i].Name" />
+                                            <input type="hidden" asp-for="@Model.ProductList[i].Id" />
                                             <li class="list-group-item d-flex justify-content-between">
                                                 <div>
-                                                    <h6 class="my-0">@item.Name</h6>
-                                                    <small class="text-muted">Price per 100 gramm: @item.Price.ToString("c")</small>
+                                                    <h6 class="my-0">@Model.ProductList[i].Name</h6>
+                                                    <small class="text-muted">Price per 100 gramm: @Model.ProductList[i].Price.ToString("c")</small>
                                                 </div>
                                             </li>
                                         }
