--- a/TeaAndCoffee/Views/Shared/_Layout.cshtml
+++ b/TeaAndCoffee/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="~/images/tile.png" width="30%" />
-                    &nbsp;Tea & Coffe
+                    &nbsp;Tea & Coffee
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -48,6 +48,15 @@
                                     <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Create Admin User</a>
+                                </div>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Order/Inquiry Management
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Inquiry" asp-action="Index">Inquiry</a>                                    
                                 </div>
                             </li>
                         }
