--- a/TeaAndCoffee/Views/Product/Index.cshtml
+++ b/TeaAndCoffee/Views/Product/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TeaAndCoffee_Models.Product>
 
 
-<div class="container p-3">
+<div class="border p-3 bg-white">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-success">Product List</h2>
+            <h2 class="text-info">Product List</h2>
         </div>
         <div class="col-6 text-xl-end">
             <a asp-action="Upsert" class="btn btn-primary fa-pull-right">
