--- a/TeaAndCoffee/Views/ApplicationType/Index.cshtml
+++ b/TeaAndCoffee/Views/ApplicationType/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TeaAndCoffee_Models.ApplicationType>
 
 
-<div class="container p-3">
+<div class="border p-3 bg-white">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-success">Application Type List</h2>
+            <h2 class="text-info">Application Type List</h2>
         </div>
         <div class="col-6 text-xl-end">
             <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary fa-pull-right">
