--- a/TeaAndCoffee/Views/Cart/Summary.cshtml
+++ b/TeaAndCoffee/Views/Cart/Summary.cshtml
@@ -12,7 +12,7 @@
                             Order Summary
                         </div>
                         <div class="col text-end">
-                            <a class="btn btn-outline-info btn-sm" style="font-size:16px">Back to Cart</a>
+                            <a asp-action="index" class="btn btn-outline-info btn-sm fa-pull-right" style="font-size:16px">Back to Cart</a>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                                         <label>Name</label>
                                     </div>
                                     <div class="col-9">
-                                        <input asp-for="@Model.ApplicationUser.FullName" type="text" class="form-control" />
+                                        <input asp-for="@Model.ApplicationUser.FullName" required type="text" class="form-control" />
                                         <span asp-validation-for="ApplicationUser.FullName" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -39,7 +39,7 @@
                                         <label>Phone</label>
                                     </div>
                                     <div class="col-9">
-                                        <input asp-for="@Model.ApplicationUser.PhoneNumber" type="text" class="form-control" />
+                                        <input asp-for="@Model.ApplicationUser.PhoneNumber" required type="text" class="form-control" />
                                         <span asp-validation-for="ApplicationUser.PhoneNumber" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -48,8 +48,17 @@
                                         <label>Email</label>
                                     </div>
                                     <div class="col-9">
-                                        <input asp-for="@Model.ApplicationUser.Email" type="text" class="form-control" />
+                                        <input asp-for="@Model.ApplicationUser.Email" required type="text" class="form-control" />
                                         <span asp-validation-for="ApplicationUser.Email" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row my-1">
+                                    <div class="col-3">
+                                        <label>Address</label>
+                                    </div>
+                                    <div class="col-9">
+                                        <input asp-for="@Model.ApplicationUser.Address" required type="text" class="form-control" />
+                                        <span asp-validation-for="ApplicationUser.Address" class="text-danger"></span>
                                     </div>
                                 </div>
                             </div>
@@ -59,17 +68,30 @@
                                         <span class="text-info">Summary:</span>
                                     </h4>
                                     <ul class="list-group mb-3">
+                                        @{
+                                            var orderTotal = 0.0;
+                                        }
+
                                         @for (int i = 0; i < Model.ProductList.Count(); i++)
                                         {
                                             <input type="hidden" asp-for="@Model.ProductList[i].Name" />
                                             <input type="hidden" asp-for="@Model.ProductList[i].Id" />
+                                            <input type="hidden" asp-for="@Model.ProductList[i].Price" />
+                                            <input type="hidden" asp-for="@Model.ProductList[i].TempWeight" />
                                             <li class="list-group-item d-flex justify-content-between">
                                                 <div>
                                                     <h6 class="my-0">@Model.ProductList[i].Name</h6>
-                                                    <small class="text-muted">Price per 100 gramm: @Model.ProductList[i].Price.ToString("c")</small>
+
+                                                    <small class="text-muted">Weight: @Model.ProductList[i].TempWeight</small>
                                                 </div>
+                                                <span class="text-muted">@((Model.ProductList[i].Price * Model.ProductList[i].TempWeight / 100).ToString("c"))</span>
                                             </li>
+                                            orderTotal += Model.ProductList[i].Price * Model.ProductList[i].TempWeight / 100;
                                         }
+                                        <li class="list-group-item d-flex justify-content-between bg-light">
+                                            <small class="text" style="color:darkred">Total</small>
+                                            <strong calss="text" style="color:darkred">@orderTotal.ToString("c")</strong>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -79,7 +101,14 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-12 col-md-5 offset-md-7">
-                            <button type="submit" class="btn btn-primary form-control">Submit Inquiry</button>
+                            @if (User.IsInRole(TeaAndCoffee_Utility.WC.AdminRole))
+                            {
+                                <button class="btn btn-success form-control" id="submit-button">Submit Order</button>
+                            }
+                            else
+                            {
+                                <button type="submit" class="btn btn-primary form-control">Submit Inquiry</button>
+                            }
                         </div>
                     </div>
                 </div>
