--- a/TeaAndCoffee/Views/Category/Index.cshtml
+++ b/TeaAndCoffee/Views/Category/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TeaAndCoffee_Models.Category>
 
 
-<div class="container p-3">
+<div class="border p-3 bg-white">
     <div class="row pt-4">
         <div class="col">
-            <h2 class="text-success">Category List</h2>
+            <h2 class="text-info">Category List</h2>
         </div>
         <div class="col fa-pull-right">
             <a asp-controller="Category" asp-action="Create" class="btn btn-primary fa-pull-right">
