--- a/TeaAndCoffee/Views/Inquiry/Index.cshtml
+++ b/TeaAndCoffee/Views/Inquiry/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
 
 
-    <table id="tblData" class="table table-striped table-bordered pt-2" style="width:100%">
+    <table id="tblData" class="table table-striped table-bordered pt-2">
         <thead class="thead-dark">
             <tr class="table-info">
                 <th>Id</th>
