--- a/TeaAndCoffee/Views/_ViewImports.cshtml
+++ b/TeaAndCoffee/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TeaAndCoffee
 @using TeaAndCoffee_Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
