--- a/TeaAndCoffee/wwwroot/css/site.css
+++ b/TeaAndCoffee/wwwroot/css/site.css
@@ -62,6 +62,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
+
     margin-bottom: 60px;
     background: url('/images/dust_scratches.png');
 }
@@ -69,12 +70,10 @@ body {
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    /*width: 100%;*/
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
-
-
 
 
 
@@ -220,6 +219,12 @@ body {
     background-color: #3C589C;
     color: white;
 }
+
+table{
+    table-layout: auto;
+    width: 100%;
+}
+
 
 
 #logreg-forms .form-reset, #logreg-forms .form-signup {
