--- a/TeaAndCoffee/Views/Shared/_Layout.cshtml
+++ b/TeaAndCoffee/Views/Shared/_Layout.cshtml
@@ -54,13 +54,7 @@
                             </li>
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Order/Inquiry Management
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Inquiry" asp-action="Index">Inquiry</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Order" asp-action="Index">Order</a>
-                                </div>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Order" asp-action="Index">Order Management</a>
                             </li>
                         }
                         <li>
