UpdateView. AndOther update.

--- a/TeaAndCoffee/Views/Shared/_IndividualProductCard.cshtml
+++ b/TeaAndCoffee/Views/Shared/_IndividualProductCard.cshtml
@@ -5,7 +5,7 @@
     <!-- Card-->
     <div class="card bg-white rounded shadow-sm" style="border:1px solid #222">
         <div class="card-footer bg-dark" style="border-radius: 0px">
-            <div class="row">
+            <div class="row" style="min-height:60px">
                 <div class="col-7">
                     <h5 class="float-left text-white">@Model.Name</h5>
                 </div>
