--- a/TeaAndCoffee/Views/Product/Delete.cshtml
+++ b/TeaAndCoffee/Views/Product/Delete.cshtml
@@ -45,8 +45,7 @@
                     </div>
                 </div>
 
-
-               <div class="form-group row" style="min-height: 50px">
+                <div class="form-group row" style="min-height: 50px">
                     <div class="col-4">
                         <label asp-for="CategoryId"></label>
                     </div>
@@ -68,7 +67,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                                <input type="submit" onclick="return validateInput()" class="btn btn-danger w-100" value="Delete" />
+                            <input type="submit" onclick="return validateInput()" class="btn btn-danger w-100" value="Delete" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-dark w-100"><i class="fa-solid fa-right-from-bracket"></i> &nbsp; Back</a>
@@ -93,8 +92,7 @@
         <partial name="_ValidationScriptsPartial" />
     }
     <script>
-        $(document).ready(function () 
-        {
+        $(document).ready(function () {
             $('.summernote').summernote('disable')
         });
     </script>
